--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -24,13 +24,16 @@ jobs:
       - name: Install Helm
         uses: azure/setup-helm@v3
 
-      - name: Add repositories
+      - name: Package All Helm Charts
         run: |
-          for dir in $(ls -d charts/*/); do
-            helm dependency list $dir 2> /dev/null | tail +2 | head -n -1 | awk '{ print "helm repo add " $1 " " $3 }' | while read cmd; do $cmd; done
+          mkdir -p ./docs
+          for dir in charts/*; do
+            helm package $dir --destination ./docs
           done
 
-      - name: Run chart-releaser
+      - name: Create GitHub Release
         uses: helm/chart-releaser-action@v1.5.0
+        with:
+          files: docs/*.tgz
         env:
-          CR_TOKEN: "${{ secrets.HELM_TOKEN }}"
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
