--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -24,16 +24,13 @@ jobs:
       - name: Install Helm
         uses: azure/setup-helm@v3
 
-      - name: Package All Helm Charts
+      - name: Add repositories
         run: |
-          mkdir -p ./docs
-          for dir in charts/*; do
-            helm package $dir --destination ./docs
+          for dir in $(ls -d charts/*/); do
+            helm dependency list $dir 2> /dev/null | tail +2 | head -n -1 | awk '{ print "helm repo add " $1 " " $3 }' | while read cmd; do $cmd; done
           done
 
-      - name: Create GitHub Release
+      - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.5.0
-        with:
-          files: docs/*.tgz
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          CR_TOKEN: "${{ secrets.HELM_TOKEN }}"
